# LocallyInjectiveMappings

./: ARAPEnergy.cpp  ARAPEnergy.h  CMakeLists.txt  EigenUtils.cpp  EigenUtils.h  LIM.cpp  LIM.h  LIMOptimizer.cpp  LIMOptimizer.h  README.md  SurfaceMeshUtils.cpp  SurfaceMeshUtils.h  main.cpp
energy/: ARAPEnergy.cpp  ARAPEnergy.h  BarrierEnergy.cpp  BarrierEnergy.h  BaseEnergy.cpp  BaseEnergy.h  LimEnergy.cpp  LimEnergy.h  NormEnergy.cpp  NormEnergy.h  PosEnergy.cpp  PosEnergy.h
solver/: LGSolver.cpp  LGSolver.h  LMSolver.cpp  LMSolver.h
tests/: ARAPEnergyTest.cpp  BarrierEnergyTest.cpp  EigenUtilsTest.cpp  LimEnergyTest.cpp  PosEnergyTest.cpp  SurfaceMeshUtilsTest.cpp
utils/: EigenUtils.h  FileIOUtils.cpp  FileIOUtils.h  SurfaceMeshUtils.cpp  SurfaceMeshUtils.h
